<resources>
    <string name="app_name">todoList</string>
    <string name="titulo_tarea">Titulo Tarea</string>
    <string name="data_tarea">Data Tarea</string>
    <string name="Titulo_main_activity">Tareas</string>
    <string name="pon_titulo_tarea">Pon un título a tu tarea.</string>
    <string name="t_tulo">Título</string>
    <string name="add">Add</string>
    <string name="editar_titulo_tarea">Editar titulo tarea</string>
    <string name="nuevo_titulo_tarea">Nuevo titulo tarea</string>
    <string name="save">Save</string>

</resources>