<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:background="@drawable/border"
        android:backgroundTint="#EDBB99">

        <TextView
            android:text="@string/editar_titulo_tarea"
            style="@style/titulo_edit" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_tulo"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/Edit_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevo_titulo_tarea"
            android:layout_marginTop="80dp"/>

        <Button
            android:id="@+id/button_save_Changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="120dp"/>

    </FrameLayout>
</LinearLayout>